--- a/Minesweeper.html
+++ b/Minesweeper.html
@@ -1,4 +1,6 @@
 <head>
+   <link rel="stylesheet" href="Minesweeper.css">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <style>
    html, body{
       height: 100%;
@@ -142,4 +144,5 @@
       
    }
    </script>
+   <script src="Minesweeper.js"></script>
 </body>
