--- a/Minesweeper.html
+++ b/Minesweeper.html
@@ -1,6 +1,6 @@
 <head>
     <title>Minesweeper - by Yodaman</title>
-    <link rel="stylesheet" href="Minesweeper.css">
+    <link rel="stylesheet" href="./Minesweeper.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -13,5 +13,5 @@
         </center>
     </div>
     <table id="board"></table>
-    <script src="Minesweeper.js"></script>
+    <script src="./Minesweeper.js"></script>
 </body>
