finished basic functionality

--- a/Minesweeper.html
+++ b/Minesweeper.html
@@ -12,6 +12,12 @@
             <button id="expert" class="mb">expert</button>
         </center>
     </div>
+    <center>
+        <div id="controls" style="height: 5vh; width: 40vw;">
+            <img id="mineModeBtn" class="cb" style="height:100%; width:auto;" src="./mine.png">
+            <img id="flagModeBtn" class="cb" style="height:100%; width:auto;" src="./flag.png">
+        </div>
+    </center>
     <table id="board"></table>
     <script src="./Minesweeper.js"></script>
     <script>
